resume.css
/***
	RESUME CSS
	terminal version site
	This is just a test of Github!
***/

body {
	margin:0;
	background-color:#000;
	padding:0 3px;
	font-family:Courier,monospace;
	color:#ccc;
	font-size:14px;
}

h1,h2,h3,ul li {
	margin:0;
	font-size:14px;
	font-weight:normal;
}

p {
	margin:5px 0;
}

a {
	color:#ccc;
	text-decoration:none;
}

a:hover {
	color:green;
}

ul {
	list-style:none;
	margin:0;
	padding:0;
}

h2 {
	clear:left;
	padding-top:10px;
	font-weight:bold;
}

h3 {
	margin:20px 0 0;
	font-style:italic;
}

h4 {
	margin:0 0 20px;
	font-weight:normal;
}

.twilio { margin:0; }

#resume-container {
	width:85%;
	padding-bottom:16px;
	position:relative;
}

#command-line {
	float:left;
	left:0;
	bottom:0;
}

.completed-command {
	float:left;
}	

#command-line span,
.completed-command span {
	float:left;
	margin-right:5px;
}

#command-line .commands,
.completed-command .commands {
	float:left;
}

#command-line .commands b {
	display:block;
	background-color:#ccc;
	width:0.75em;
	height:1em;
	float:right;

	-webkit-animation: cursor_flash 1s ease-out 0s infinite;
	   -moz-animation: cursor_flash 1s ease-out 0s infinite;
	     -o-animation: cursor_flash 1s ease-out 0s infinite;
	        animation: cursor_flash 1s ease-out 0s infinite;
}

@-webkit-keyframes cursor_flash { 0%, 100% { opacity:1; } 50% { opacity:0; } }
   @-moz-keyframes cursor_flash { 0%, 100% { opacity:1; } 50% { opacity:0; } }
	 @-o-keyframes cursor_flash { 0%, 100% { opacity:1; } 50% { opacity:0; } }
		@keyframes cursor_flash { 0%, 100% { opacity:1; } 50% { opacity:0; } }


.completed-command .commands b {
	display:none;
}

p.error {
	clear:left;
	margin:0;
}

#sections, #help, #error, .twilio-instructions {
	display:none;
}

ul.skills,
ul.help {
	overflow:hidden;
}	

ul.skills li,
ul.help li {
	float:left;
	margin-right:20px;
}

#skills h3 {
	clear:left;
}

textarea#commands {
	font-family:Courier,monospace;
	color:#ccc;
	font-size: 14px;
    border: none;
    background-color: transparent;
    resize: none;
    outline: none;
}

